# Steele

./: .gitmodules  .sconsign.dblite
Steel-Godot/: Test_Scene.gd  (+2 more)
Steele-C/: .gitignore  .sconsign.dblite  CMakeLists.txt  SConstruct  build.ninja  cmake_install.cmake  main.cpp
Steele-C/GDExtensions/: test.gdextension
Steele-C/Source/: IMap.h  Utils.h  json.cpp  json.h
Steele-C/Source/Base/: IJsonable.cpp  IJsonable.h
Steele-C/Source/Base/Generation/: IBrush.cpp  IBrush.h  IGenerationMap.h  IGenerationScope.h
Steele-C/Source/Base/Map/: AbortMap.h  IMap.h  IStackableMap.h  MapDecorator.h  MapStack.h  SimpleMap.h  StackedMap.h  TransformedMap.h
Steele-C/Source/Base/RNG/: IRNG.cpp  IRNG.h  IStateRNG.cpp  IStateRNG.h
Steele-C/Source/DataTypes/: Area.cpp  Area.h  Direction.cpp  Direction.h  GenericMap.h  IDMap.cpp  IDMap.h  SteeleID.cpp  SteeleID.h  Transformation.cpp  Transformation.h  TransformationStack.cpp  TransformationStack.h  Types.h  item_name.cpp  item_name.h
Steele-C/Source/DataTypes/Area/: AlignSettings.cpp  AlignSettings.h  Aligner.cpp  Aligner.h  Alignment.cpp  Alignment.h  AreaLine.cpp  iterator.cpp  outline_scalar_iterator.cpp  outline_scalar_iterator.h
Steele-C/Source/DataTypes/Generation/: BrushType.h  GenerationResourcesDB.cpp  GenerationResourcesDB.h  Palette.h
Steele-C/Source/DataTypes/Map/: Cell.cpp  Cell.h  Ground.cpp  Ground.h
Steele-C/Source/DataTypes/RNG/: RandomState.h  ReferenceValue.cpp  ReferenceValue.h  StateReference.cpp  StateReference.h
Steele-C/Source/DataTypes/World/: Actor.h  ChaosManager.cpp  ChaosManager.h  Element.h  Location.h  Map.h  Region.cpp  Region.h  Road.h  Totem.cpp  Totem.h  World.cpp  World.h
Steele-C/Source/Debug/: MapDebug.cpp  MapDebug.h
Steele-C/Source/Exceptions/: JSONException.cpp  JSONException.h  MapExceptions.cpp  MapExceptions.h  PaintException.cpp  PaintException.h  SteeleException.cpp  SteeleException.h
Steele-C/Source/GDNative/: Common.h  GodotTestPlugin.cpp  GodotTestPlugin.h  gd_extension.cpp  gd_extension.h
Steele-C/Source/GDNative/Common/: ResourceObject.h
Steele-C/Source/GDNative/DataTypes/: Area.cpp  Area.h  Dir.cpp  Dir.h  IDMap.cpp  IDMap.h  ResourcesDBNode.cpp  ResourcesDBNode.h  SteeleID.cpp  SteeleID.h
Steele-C/Source/GDNative/Generation/: Generator.cpp  Generator.h
Steele-C/Source/GDNative/RNG/: RandomState.cpp  RandomState.h  XoroshiroRNG.cpp  XoroshiroRNG.h
Steele-C/Source/GDNative/Test/: GodotTestPlugin.cpp  GodotTestPlugin.h
Steele-C/Source/Generation/: CellConditions.cpp  CellConditions.h  GenCell.cpp  GenCell.h  GenMap.cpp  GenMap.h  GenerationScope.cpp  GenerationScope.h  IGenerationMap.h  IGenerationScope.h  Palette.h  fs.cpp  fs.h  json_brush.cpp  json_brush.h
Steele-C/Source/Generation/Brushes/: AreaBrush.cpp  AreaBrush.h  BrushSetting.h  CanvasBrush.cpp  CanvasBrush.h  CanvasTemplate.h  DirectionSettings.h  FillBrush.cpp  FillBrush.h  FillSettings.cpp  RowBrush.cpp  RowBrush.h  TemplateBrush.cpp  TemplateBrush.h  brushes.cpp  brushes.h
Steele-C/Source/Generation/FS/: json_brush.cpp  json_brush.h
Steele-C/Source/Generation/Map/: AbstractGenerationMap.h  GenerationMap.cpp  GenerationMap.h  ITransformable.cpp  ITransformable.h  TransformationStack.cpp  TransformationStack.h
Steele-C/Source/Map/: Cell.cpp  Cell.h  GroundTile.h  WorldMap.cpp  WorldMap.h
Steele-C/Source/RNG/: IRNG.cpp  IRNG.h  XoroshiroRNG.cpp  XoroshiroRNG.h
Steele-C/Source/World/: SteeleEngine.cpp  SteeleEngine.h
Steele-C/Tests/: test.cpp  test_utils.cpp  test_utils.h
Steele-C/Tests/DataTypes/: AreaTest.cpp  TransformationTest.cpp
Steele-C/Tests/RNG/: XoroshiroRNGTest.cpp
Steele-C/godot-cpp/test/: README.md
(+282 files in other folders)
